@@ -1,3 +1,4 @@
+AUX 10-vmware-tools 114 RMD160 381423877ec3368af89bd1860c9ab2237c00ea22 SHA1 0ae176a10bd65358a3c7e449e49bced4375ea9ca SHA256 0c0d8c2bdea3f8fee3f061bc5a2dbfbed33167afa9202767a54192c69f186702
 AUX default-scripts.patch 3525 RMD160 7c3dfd342be245531493a9cf7a8be2be4c67dc4b SHA1 56ba6ca91262f73732a7d806a9c812aea683c2d2 SHA256 99ad1a202335736c50bbb92432371e522934d1a3347e992158b881cf9f810da6
 AUX disable-toolbox.patch 4995 RMD160 dcce189c748f6e718d822a05f3fa96196cc9b7fd SHA1 497b488203c07bdb87332718c83ee412eee9c719 SHA256 337bdc179a32495e12931daf2f9c5438cb0dd08ee1009feb905d7f84c3d8115b
 AUX makefile-destdir.patch 3108 RMD160 e2acae9a7a1eee8b900dea64ffe32da84bfb9cdc SHA1 77663372717e06c0e9e4bd47e02401d76298a298 SHA256 0be2f3ac56c6abee208c771a29f97c6cbc78e8cef128f2ac3a60cf471a6efff2
@@ -8,6 +9,8 @@ AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba
 DIST open-vm-tools-2008.04.14-87182.tar.gz 2430703 RMD160 2003b86f881b8a9b51c61e833b0b7d4aca70e083 SHA1 0394f73975a34699b92ce90822803fdb365abc6f SHA256 34c19a50650e70fbaa3c1d01803cc96fd86dde4d5f1349bf444026a4b1016b07
 DIST open-vm-tools-2008.05.15-93241.tar.gz 2462536 RMD160 6482557a2bfd5628093e7d02262c6cb1f072c334 SHA1 58c1861ffdedb205fe58f65b29ad47bf72ded836 SHA256 465657c6c59b88458bb6bf8a5411ab7d1e5aef548e931b4291c8cec1cba55ea3
 DIST open-vm-tools-2008.07.01-102166.tar.gz 2558112 RMD160 7324a0f7f4f99ee23547bf51aaba316c79ceee55 SHA1 311de7dcc6bf50f017a399180b884150c21a6f32 SHA256 51293ff716bff35ecd03e8747280280be0a748e9fc5ec7c2d02d936b0c86d1c5
+DIST open-vm-tools-2008.08.08-109361.tar.gz 2971141 RMD160 4ea0a6aa2edda2bc404c865dc5b58f3a177ae411 SHA1 1c44c3524cd9cbc5870f1c6065b03a6b31859a25 SHA256 b7abff74f87b05cf1d78c5076c1e5c83b37639eed84498834becdfc20e4f798e
 EBUILD open-vm-tools-0.0.20080414.87182.ebuild 3683 RMD160 1ed0a118495b177076ac4585c512770047ccc02b SHA1 49b56355f9b39f5f2c71fac0a7e723dbaaa63836 SHA256 6ddba316a27d4aac5390b983e0ab905a80727c92a8b0c82e42f68a367b9a525c
 EBUILD open-vm-tools-0.0.20080515.93241.ebuild 3638 RMD160 70ab5b74e1c4452cdc6cc2bfaa61fa8048cc5309 SHA1 d95a10736c41eaf1970b50059f756bbff4506868 SHA256 9fcd8f3c40f8bd8cdb04fed77626b4a485ffc8680b876bfd5734c2a898393697
 EBUILD open-vm-tools-0.0.20080701.102166.ebuild 2701 RMD160 5bc76a6525535758de70ec1fbb57add017e7b1fa SHA1 6bb9d0bc96ed8b1fb9fafe3f8bca9b6cf736617a SHA256 e6dee5b5e4c2cf9aa8f0968b44e5f49acf96c813c65ed7e4bd7706e4f93dc1d8
+EBUILD open-vm-tools-0.0.20080808.109361.ebuild 2706 RMD160 9d21bcee4e0cf9e5d9699601e76600b84a5b9499 SHA1 53e5c9d41cbe0c13b3a189ac05d5131eacb77a41 SHA256 9434c669611d7b3508a6510d9dc75b8ee15e26832bad7b2b70f634f559911b39
