@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  20 Aug 2008; Mike Auty <ikelos@gentoo.org>
+  +app-emulation/open-vm-tools/files/10-vmware-tools:
+  Bump open-vm-tools and add patch from Mrness for autostarting vmware-user.
+
   19 Aug 2008; Mike Auty <ikelos@gentoo.org>
   -app-emulation/vmware-server/vmware-server-2.0.0.101586.ebuild:
   Remove the broken vmware-server ebuild.
